fix: swagger spec, router
